fix: invisible no articles msg

--- a/client/styles/CategoryCarousel.module.scss
+++ b/client/styles/CategoryCarousel.module.scss
@@ -40,6 +40,9 @@
   justify-content: center;
   text-align: center;
   padding: 3% 10%;
+  h3 {
+    color: #303030;
+  }
 }
 .button {
   background-color: #fff;
